--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@swc/helpers": "^0.5.17",
     "@types/archiver": "^6.0.3",
     "archiver": "^7.0.1",
-    "next": "15.5.6",
+    "next": "^16.1.6",
     "playwright": "^1.56.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
